--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 									</li>
 									<li class="menu__item">
 										<div class="menu__link link-expandable">
-											<p>More</p>
+											<p><span>More</span></p>
 											<ul class="link-expandable__list">
 												<li><a href="#" class="notexpandable">Share</a></li>
 												<li><a href="#" class="notexpandable">Designer</a></li>
