--- a/page_3.html
+++ b/page_3.html
@@ -292,7 +292,7 @@
 							</div>
 							<div class="recent-posts__pagination pagination">
 								<div class="pagination__body">
-									<a href="index.html" class="pagination__button pagination__button-back">
+									<a href="page_2.html" class="pagination__button pagination__button-back">
 										<img src="images/recent-posts/pagination-btn-back.svg" alt="">
 									</a>
 									<ul class="pagination__list">
