--- a/page_2.html
+++ b/page_2.html
@@ -3,7 +3,7 @@
 <head>
 	<title></title>
 	<link rel="stylesheet" href="css/style.css"/>
-	<link rel="shortcut image" href="#"/>
+	<link rel="shortcut icon" href="favicon.ico"/>
 	<meta http-equiv="content-type" content="text/HTML; charset=UTF-8"/>
 	<meta name="viewport" content="width=device-width"/>
 	<script src="js/jquery.js"></script>
@@ -165,22 +165,22 @@
 								<div class="rp-navigation__body">
 									<ul class="rp-navigation__list ">
 										<li class="rp-navigation__item active ">
-											<a href="#" class="rp-navigation__link">
+											<a href="index.html" class="rp-navigation__link">
 												<span>All</span>
 											</a>
 										</li>
 										<li class="rp-navigation__item ">
-											<a href="#" class="rp-navigation__link">
+											<a href="categories/design-theory.html" class="rp-navigation__link">
 												<span>Design Theory</span>
 											</a>
 										</li>
 										<li class="rp-navigation__item ">
-											<a href="#" class="rp-navigation__link">
+											<a href="categories/tech.html" class="rp-navigation__link">
 												<span>Tech</span>
 											</a>
 										</li>
 										<li class="rp-navigation__item ">
-											<a href="#" class="rp-navigation__link">
+											<a href="categories/user-interface.html" class="rp-navigation__link">
 												<span>User Interface</span>
 											</a>
 										</li>
