--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<title>Meliora – Just another VeronaLabs Demo Environment</title>
+	<link rel="preload" href="css/preload.css">
 	<link rel="stylesheet" href="css/style.css"/>
 	<link rel="shortcut icon" href="favicon.ico"/>
 	<meta http-equiv="content-type" content="text/HTML; charset=UTF-8"/>
@@ -11,7 +12,7 @@
 </head>
 <body>
 	<div class="wrapper">
-		<header class="header" id="header top">
+<header class="header" id="header top">
     <div class="container">
         <div class="header__row">
             <div class="header__logo">Meliora</div>
@@ -104,7 +105,7 @@
 		<main class="main">
 			<div class="container">
 				<div class="main__row">
-					<div class="main__column sidebar-about">
+<div class="main__column sidebar-about">
     <div class="sidebar-about__body">
         <h2 class="sidebar-about__title">
             What I do!
