some fixes for pagespeed

--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
 							<div class="recent-posts__pagination pagination">
 								<div class="pagination__body">
 									<a href="#" class="pagination__button pagination__button-back">
-										<img src="images/recent-posts/pagination-btn-back.svg" alt="">
+										<img src="images/recent-posts/pagination-btn-back.svg" alt="" style="max-width: 100%; max-height: 100%;">
 									</a>
 									<ul class="pagination__list">
 										<li class="pagination__item">
@@ -315,7 +315,7 @@
 										</li>
 									</ul>
 									<a href="page_2.html" class="pagination__button pagination__button-next">
-										<img src="images/recent-posts/pagination-btn-next.svg" alt="">
+										<img src="images/recent-posts/pagination-btn-next.svg" alt="" style="max-width: 100%; max-height: 100%;">
 									</a>
 								</div>
 							</div>
