--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
 							<div class="recent-posts__pagination pagination">
 								<div class="pagination__body">
 									<a href="#" class="pagination__button pagination__button-back">
-										<img src="images/recent-posts/pagination-btn-back.svg" alt="" style="max-width: 100%; max-height: 100%;">
+										<img src="images/recent-posts/pagination-btn-back.svg" alt="" style="width: 6px; height: 10.6px;">
 									</a>
 									<ul class="pagination__list">
 										<li class="pagination__item">
@@ -313,7 +313,7 @@
 										</li>
 									</ul>
 									<a href="page_2.html" class="pagination__button pagination__button-next">
-										<img src="images/recent-posts/pagination-btn-next.svg" alt="" style="max-width: 100%; max-height: 100%;">
+										<img src="images/recent-posts/pagination-btn-next.svg" alt="" style="width: 6px; height: 10.6px;">
 									</a>
 								</div>
 							</div>
