final update for pagespeed

--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
     <div class="container">
         <div class="footer__row">
             <div class="footer__copyright">
-                <span class="copyright">Copyright <img src="images/footer/copyright-icon.svg" alt=""></span>
+                <span class="copyright">Copyright <img src="images/footer/copyright-icon.svg" alt="" style="width: 12px; height: 12.83px;"></span>
                 <span>2020 Meliora, Inc</span>
             </div>
             <div class="footer__back-2-header back-2-header">
