some fixes in jquery code

--- a/page_2.html
+++ b/page_2.html
@@ -189,7 +189,7 @@
 							</div>
 						</div>
 						<div class="recent-posts__content">
-							<div class="recent-posts__post post">
+							<article class="recent-posts__post post">
 								<div class="post__date">
 									<time>April 20, 2019</time>
 								</div>
@@ -209,8 +209,8 @@
 										</div>
 									</div>
 								</div>
-							</div>
-							<div class="recent-posts__post post">
+							</article>
+							<article class="recent-posts__post post">
 								<div class="post__date">
 									<time>June 03, 2019</time>
 								</div>
@@ -228,8 +228,8 @@
 										</ul>
 									</div>
 								</div>
-							</div>
-							<div class="recent-posts__post post post-has-wrapped-tags">
+							</article>
+							<article class="recent-posts__post post post-has-wrapped-tags">
 								<div class="post__date">
 									<time>September 13, 2019</time>
 								</div>
@@ -261,8 +261,8 @@
 											</li>
 										</ul></div>
 								</div>
-							</div>
-							<div class="recent-posts__post post">
+							</article>
+							<article class="recent-posts__post post">
 								<div class="post__date">
 									<time>October 09, 2019</time>
 								</div>
@@ -285,7 +285,7 @@
 										</ul>
 									</div>
 								</div>
-							</div>
+							</article>
 							<div class="recent-posts__pagination pagination">
 								<div class="pagination__body">
 									<a href="index.html" class="pagination__button pagination__button-back">
