--- a/page_3.html
+++ b/page_3.html
@@ -188,7 +188,7 @@
 							</div>
 						</div>
 						<div class="recent-posts__content">
-							<div class="recent-posts__post post">
+							<article class="recent-posts__post post">
 								<div class="post__date">
 									<time>February 05, 2019</time>
 								</div>
@@ -208,8 +208,8 @@
 										</div>
 									</div>
 								</div>
-							</div>
-							<div class="recent-posts__post post">
+							</article>
+							<article class="recent-posts__post post">
 								<div class="post__date">
 									<time>February 03, 2019</time>
 								</div>
@@ -227,8 +227,8 @@
 										</ul>
 									</div>
 								</div>
-							</div>
-							<div class="recent-posts__post post post-has-wrapped-tags">
+							</article>
+							<article class="recent-posts__post post post-has-wrapped-tags">
 								<div class="post__date">
 									<time>January 29, 2019</time>
 								</div>
@@ -258,10 +258,11 @@
 													</li>
 												</ul>
 											</li>
-										</ul></div>
+										</ul>
+									</div>
 								</div>
-							</div>
-							<div class="recent-posts__post post">
+							</article>
+							<article class="recent-posts__post post">
 								<div class="post__date">
 									<time>January 11, 2019</time>
 								</div>
@@ -289,7 +290,7 @@
 										</ul>
 									</div>
 								</div>
-							</div>
+							</article>
 							<div class="recent-posts__pagination pagination">
 								<div class="pagination__body">
 									<a href="index.html" class="pagination__button pagination__button-back">
