--- a/page_3.html
+++ b/page_3.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title></title>
+	<title>Page 3 - Meliora</title>
 	<link rel="stylesheet" href="css/style.css"/>
 	<link rel="shortcut icon" href="favicon.ico"/>
 	<meta http-equiv="content-type" content="text/HTML; charset=UTF-8"/>
 	<meta name="viewport" content="width=device-width"/>
-	<script src="js/jquery.js"></script>
-	<script src="js/script.js"></script>
 </head>
 <body>
 	<div class="wrapper">
@@ -372,5 +370,7 @@
 			</div>
 		</footer>
 	</div>
+	<script src="js/jquery.js"></script>
+	<script src="js/script.js"></script>
 </body>
 </html>
