--- a/page_3.html
+++ b/page_3.html
@@ -37,14 +37,14 @@
 									</a>
 								</li>
 								<li class="primary-menu__item primary-menu__item menu__item-has-child">
-									<a href="#" class="primary-menu__link">
+									<div class="primary-menu__link not-linked">
 										<span>More</span>
 										<span class="menu__link-icon">
 											<svg width="11" height="6" viewBox="0 0 11 6" fill="none" xmlns="http://www.w3.org/2000/svg">
 											<path d="M9.58583 0.0784063C9.6356 0.0282258 9.70335 1.0746e-08 9.77403 9.90319e-09C9.8447 9.06038e-09 9.91245 0.0282258 9.96223 0.0784063L10.5242 0.640348C10.5754 0.688449 10.6045 0.755607 10.6045 0.825895C10.6045 0.896183 10.5754 0.963341 10.5242 1.01144L5.65224 5.88337C5.57775 5.95796 5.47668 5.99991 5.37127 6L5.23343 6C5.12802 5.99991 5.02695 5.95796 4.95246 5.88337L0.0805311 1.01144C0.0292797 0.963341 0.000206958 0.896183 0.000206957 0.825895C0.000206956 0.755607 0.0292797 0.688449 0.0805311 0.640348L0.642473 0.0784065C0.692244 0.0282259 0.759995 1.17394e-07 0.830671 1.16552e-07C0.901348 1.15709e-07 0.969098 0.0282259 1.01887 0.0784064L5.30235 4.36189L9.58583 0.0784063Z" fill="#8a8a8a"/>
 											</svg>
 										</span>
-									</a>
+									</div>
 									<ul class="primary-menu__sub-menu secondary-menu">
 										<li class="secondary-menu__item">
 											<a href="#" class="secondary-menu__link">
@@ -52,27 +52,27 @@
 											</a>
 										</li>
 										<li class="secondary-menu__item menu__item-has-child">
-											<a href="#" class="secondary-menu__link">
+											<div class="secondary-menu__link not-linked">
 												<span>Child 2</span>
 												<span class="menu__link-icon">
 													<svg width="8" height="5" viewBox="0 0 8 5" fill="none" xmlns="http://www.w3.org/2000/svg">
 													<path d="M6.72143 0.421106C6.75305 0.387653 6.7961 0.368835 6.841 0.368835C6.88591 0.368835 6.92895 0.387653 6.96058 0.421106L7.31762 0.795734C7.35018 0.827801 7.36865 0.872573 7.36865 0.919432C7.36865 0.966291 7.35018 1.01106 7.31762 1.04313L4.22215 4.29108C4.17482 4.34081 4.11061 4.36877 4.04363 4.36884L3.95606 4.36884C3.88908 4.36877 3.82487 4.34081 3.77754 4.29108L0.682072 1.04313C0.649508 1.01106 0.631037 0.966291 0.631037 0.919432C0.631037 0.872573 0.649508 0.827801 0.682072 0.795734L1.03911 0.421106C1.07073 0.387652 1.11378 0.368835 1.15869 0.368835C1.20359 0.368835 1.24664 0.387652 1.27826 0.421106L3.99984 3.27676L6.72143 0.421106Z" fill="#8a8a8a"/>
 													</svg>
 												</span>
-											</a>
+											</div>
 											<ul class="secondary-menu__sub-menu tertiary-menu">
 												<li class="tertiary-menu__item">
-													<a href="#" class="tertiary-menu__link">
+													<a href="#!" class="tertiary-menu__link">
 														<span>Child 1</span>
 													</a>
 												</li>
 												<li class="tertiary-menu__item menu__item-has-child">
-													<a href="#" class="tertiary-menu__link">
+													<a href="#!" class="tertiary-menu__link">
 														<span>Child 2</span>
 													</a>
 												</li>
 												<li class="tertiary-menu__item">
-													<a href="#" class="tertiary-menu__link">
+													<a href="#!" class="tertiary-menu__link">
 														<span>Child 3</span>
 													</a>
 												</li>
@@ -94,7 +94,7 @@
 							<svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
 							<path fill-rule="evenodd" clip-rule="evenodd" d="M12.331 11.0715L15.8859 14.6313C16.0447 14.8079 16.0368 15.0783 15.8681 15.2454L15.246 15.8684C15.1626 15.9526 15.049 16 14.9305 16C14.812 16 14.6985 15.9526 14.615 15.8684L11.0601 12.3085C10.9618 12.21 10.8726 12.1028 10.7935 11.9881L10.127 11.0982C9.02413 11.9801 7.6546 12.4602 6.24327 12.4598C3.33502 12.4699 0.807867 10.461 0.157951 7.62231C-0.491966 4.78365 0.90881 1.87288 3.53098 0.613257C6.15315 -0.646363 9.29689 0.0813446 11.101 2.36555C12.9052 4.64977 12.8882 7.88086 11.0601 10.1459L11.9489 10.76C12.0877 10.849 12.2159 10.9535 12.331 11.0715ZM1.79968 6.23008C1.79968 8.68763 3.78915 10.6799 6.24329 10.6799C7.42181 10.6799 8.55206 10.2111 9.3854 9.37656C10.2187 8.54206 10.6869 7.41024 10.6869 6.23008C10.6869 3.77252 8.69743 1.78027 6.24329 1.78027C3.78915 1.78027 1.79968 3.77252 1.79968 6.23008Z" fill="white"/>
 							</svg>
-						</button>
+					</button>
 					</div>
 				</div>
 			</div>
