new pages (blog)

--- a/page_3.html
+++ b/page_3.html
@@ -192,7 +192,7 @@
 								</div>
 								<div class="post__title-n-tags">
 									<h3 class="post__title">
-										Bad Design vs. Good Design: 5 Examples We can Learn From
+										<a href="articles/article_1.html">Bad Design vs. Good Design: 5 Examples We can Learn From</a>
 									</h3>
 									<div class="post__tags tags">
 										<div class="tags__body">
@@ -213,7 +213,7 @@
 								</div>
 								<div class="post__title-n-tags">
 									<h3 class="post__title">
-										7 Secrets for Success Design Prototype: 7 Examples We can Learn From
+										<a href="articles/article_3.html">7 Secrets for Success Design Prototype: 7 Examples We can Learn From</a>
 									</h3>
 									<div class="post__tags tags">
 										<ul class="tags__list">
@@ -232,7 +232,7 @@
 								</div>
 								<div class="post__title-n-tags">
 									<h3 class="post__title">
-										The 7 Factors that Influence User Experience
+										<a href="articles/article_2.html">User Interface Design Guidelines: 10 Rules of Thumb</a>
 									</h3>
 									<div class="post__tags tags">
 										<ul class="tags__list">
@@ -266,7 +266,7 @@
 								</div>
 								<div class="post__title-n-tags">
 									<h3 class="post__title">
-										Usability: As a Part of the User Experience
+										<a href="articles/article_4.html">Usability: As a Part of the User Experience</a>
 									</h3>
 									<div class="post__tags tags">
 										<ul class="tags__list">
