--- a/page_3.html
+++ b/page_3.html
@@ -12,7 +12,7 @@
 		<header class="header" id="header top">
 			<div class="container">
 				<div class="header__row">
-					<div class="header__logo">Meliora</div>
+					<div class="header__logo"><a href="index.html">Meliora</a></div>
 					<div class="header__navigation primary-navigation">
 						<div class="primary-navigation__icon icon-menu">
 							<span></span>
