--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 								</div>
 								<div class="post__title-n-tags">
 									<h3 class="post__title">
-										<a href="#">Bad Design vs. Good Design: 5 Examples We can Learn From</a>
+										<a href="articles/article_1.html">Bad Design vs. Good Design: 5 Examples We can Learn From</a>
 									</h3>
 									<div class="post__tags tags">
 										<div class="tags__body">
@@ -214,7 +214,7 @@
 								</div>
 								<div class="post__title-n-tags">
 									<h3 class="post__title">
-										<a href="#">User Interface Design Guidelines: 10 Rules of Thumb</a>
+										<a href="articles/article_2.html">User Interface Design Guidelines: 10 Rules of Thumb</a>
 									</h3>
 									<div class="post__tags tags">
 										<ul class="tags__list">
@@ -233,7 +233,7 @@
 								</div>
 								<div class="post__title-n-tags">
 									<h3 class="post__title">
-										<a href="#">The 7 Factors that Influence User Experience</a>
+										<a href="articles/article_3.html">The 7 Factors that Influence User Experience</a>
 									</h3>
 									<div class="post__tags tags">
 										<ul class="tags__list">
@@ -276,7 +276,7 @@
 								</div>
 								<div class="post__title-n-tags">
 									<h3 class="post__title">
-										<a href="#">Usability: A part of the User Experience</a>
+										<a href="articles/article_4.html">Usability: A part of the User Experience</a>
 									</h3>
 									<div class="post__tags tags">
 										<ul class="tags__list">
